# Locus

./: .env.example  .gitignore  README.md  alembic.ini  compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260419_0001_phase0_extensions.py  20260419_0002_phase2_core_tables.py  20260419_0003_phase3_geo_columns.py  20260419_0004_phase8_usage_events.py
app/: main.py
app/api/: __init__.py  deps.py  router.py
app/api/routes/: __init__.py  admin.py  auth.py  autocomplete.py  entities.py  health.py  investor.py  map.py  recruiting.py  runs.py  sales.py  watchlists.py
app/core/: __init__.py  auth.py  config.py  errors.py  health.py  logging.py  operations.py  redis_client.py  users.py
app/crustdata/: __init__.py  cache.py  client.py  company.py  errors.py  fields.py  filters.py  person.py  types.py
app/db/: __init__.py  models.py  session.py
app/entities/: schemas.py  service.py
app/geo/: __init__.py  clusters.py  geocode.py  jobs.py  normalize.py  schemas.py
app/lenses/: __init__.py  investor.py  recruiting.py  sales.py  scoring.py
app/runs/: __init__.py  normalization.py  schemas.py  service.py
app/ui/: __init__.py  routes.py
app/ui/assets/: app.js  index.html  (+1 more)
app/watchlists/: schemas.py  service.py
tests/: conftest.py  test_autocomplete_routes.py  test_config.py  test_crustdata_client.py  test_crustdata_errors.py  test_crustdata_fields.py  test_crustdata_filters.py  test_geo.py  test_health.py  test_investor.py  test_recruiting.py  test_runs.py  test_sales.py  test_ui.py  test_watchlists.py
